Fixed Z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
 
 ::ng-deep .btn-current-location {
   position: absolute;
-  top:60px;
-  right: 40px;
-  z-index: 1000;
+  top:50px;
+  padding: 10px;
+  right: 10px;
+  z-index: 2;
 }
 
 main {
